# vector

./: LICENSE  pyproject.toml
src/: vector.py  vector_examples.py
