[project]
name = "vector"
version = "0.0.1"
authors = [
  { name="Example Author", email="marek.sys@gmail.com" },
]
description = "vector with useful operations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sysox/vector"
Issues = "https://github.com/sysox/vector/issues"